# nucleo-cc1120

./: CC1120.cpp  CC1120.hpp  CC1120.prs  CMakeLists.txt  cc112x_spi.cpp  cc112x_spi.h  hal_types.h  main.cpp  nucleo_cc1120_hal.cpp
test/: CMakeLists.txt
test/mock/: MockDigitalOut.hpp  MockSPI.hpp  mbed.cpp  mbed.h
test/tests/: cc1120_test.cpp
